--- a/dictionary/CMakeLists.txt
+++ b/dictionary/CMakeLists.txt
@@ -2,5 +2,21 @@ cmake_minimum_required(VERSION 3.13)
 project(dictionary C)
 
 set(CMAKE_C_STANDARD 99)
+set(SOURCE_FILES main.c)
+include(FindGTK2)
+if (GTK2_FOUND)
+    include_directories(${GTK2_INCLUDE_DIRS})
+    link_directories(${GTK2_LIBRARY_DIRS})
+    link_libraries(${GTK2_LIBRARIES})
+endif (GTK2_FOUND)
+add_executable(gtk_test ${SOURCE_FILES})
+
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(GTK3 REQUIRED gtk+-3.0)
+
+include_directories(${GTK3_INCLUDE_DIRS})
+link_directories(${GTK3_LIBRARY_DIRS})
+
+add_definitions(${GTK3_CFLAGS_OTHER})
 
 add_executable(dictionary main.c)
